fix(icons): 🖼 Fix drag and remove icons overlapping for nested nodes

--- a/scss/styles/editor.scss
+++ b/scss/styles/editor.scss
@@ -24,10 +24,10 @@
   textarena-node {
     display: block;
     position: relative;
-    margin-left: -2em;
-    margin-right: -2em;
-    padding-left: 2em;
-    padding-right: 2em;
+    margin-left: -2rem;
+    margin-right: -2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
 
     &.textarena-selected {
       // position: relative;
@@ -37,7 +37,7 @@
         position: absolute;
         inset: 0;
         background-color: #0080ed6b;
-        min-height: 1em;
+        min-height: 1rem;
       }
     }
 
@@ -63,11 +63,15 @@
       }
     }
 
+    textarena-node > textarena-remove {
+      right: 1.5em;
+    }
+
     > textarena-drag {
       user-select: none;
       display: none;
       position: absolute;
-      left: 0.2em;
+      left: -0.2em;
       top: 0;
       background: white;
       padding: 0.4em;
@@ -77,7 +81,11 @@
       color: #888;
       z-index: 100;
       cursor: move;
-      line-height: 0.5em;
+      line-height: 0.5rem;
+    }
+  
+    textarena-node > textarena-drag {
+      left: 1em;
     }
 
     &:hover {
